# houdini-ocean-toolkit

./: .hgignore  CMakeLists.txt  ChangeLog  ProjectHome.md  README.txt  pavement.py
CMakeModules/: FindHDK.cmake
docs/: conf.py  hot.rst  index.rst  pavement.py
src/: CMakeLists.txt  Ocean.h  SOP_Cleave.C  SOP_Ocean.C  compile_win64.sh  pavement.py
